--- a/index.html
+++ b/index.html
@@ -1,1 +1,155 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Moses Mansaray - Professional Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+            color: #333;
+            line-height: 1.6;
+        }
+        header {
+            background-color: #0073e6;
+            color: white;
+            padding: 1rem 0;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 2rem;
+        }
+        main {
+            padding: 1.5rem;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        section {
+            margin-bottom: 2rem;
+        }
+        h2 {
+            color: #0073e6;
+            margin-bottom: 0.5rem;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        ul li {
+            background: #fff;
+            margin: 0.5rem 0;
+            padding: 1rem;
+            border-radius: 5px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        ul li:hover {
+            background-color: #f0f8ff;
+        }
+        a {
+            color: #0073e6;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        strong {
+            color: #333;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Moses Mansaray - Professional Portfolio</h1>
+    </header>
+    <main>
+        <section>
+            <h2>Summary</h2>
+            <p>Seasoned technology leader with extensive experience in engineering management, digital transformation, and agile methodologies. Armed with an MBA in Technology Management and a hands-on engineering foundation, I excel in aligning technology with business strategy to drive innovation, growth, and efficiency.</p>
+        </section>
+        <section>
+            <h2>Work History</h2>
+            <ul>
+                <li>
+                    <strong>Principal Engineer (Engineering Manager) - GfK, London</strong> (Jan 2022 - Present)<br>
+                    <ul>
+                        <li>Led a €100,000/month savings digital transformation initiative by optimizing legacy systems.</li>
+                        <li>Expanded global engineering teams, reducing workforce costs by 45% while maintaining productivity.</li>
+                        <li>Promoted 11 senior engineers into leadership roles, fostering growth and mentoring.</li>
+                    </ul>
+                </li>
+                <li>
+                    <strong>Tech Lead (Senior Engineering Contractor) - GfK, London</strong> (Jul 2018 - Jan 2022)<br>
+                    <ul>
+                        <li>Launched an “internal university” program, reducing team churn by 30%.</li>
+                        <li>Implemented agile practices that improved team efficiency and delivery timelines by 25%.</li>
+                        <li>Developed scalable tech stacks for rapid MVP development, securing additional funding.</li>
+                    </ul>
+                </li>
+                <li>
+                    <strong>Director (Technical Consultant) - Doraventures</strong> (May 2017 - Jan 2022)<br>
+                    <ul>
+                        <li>Delivered reusable ETL pipelines, improving efficiency in data integration projects.</li>
+                        <li>Advised clients on agile practices, improving delivery timelines and product quality.</li>
+                        <li>Collaborated with cross-functional teams to streamline cloud adoption strategies.</li>
+                    </ul>
+                </li>
+                <li>
+                    <strong>Java Team Interim Development Manager - Euromoney Institutional Investor, London</strong> (Jul 2015 - May 2017)<br>
+                    <ul>
+                        <li>Enhanced enterprise search capabilities, reducing configuration times by 20%.</li>
+                        <li>Streamlined reusable semantic search services, cutting development costs significantly.</li>
+                        <li>Mentored junior developers, improving team skillsets and productivity.</li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Skills</h2>
+            <ul>
+                <li><strong>Leadership:</strong> Strategic planning, technology roadmapping, team building, scaling up and scaling down, nearshore and offshoring engineering strategies, vendor management, mentoring, digital transformation, cost optimization</li>                
+                <li><strong>Programming:</strong> Java, TypeScript, Node.js, Spring Boot</li>
+                <li><strong>Cloud & DevOps:</strong> AWS, GCP, Kubernetes, Docker, Jenkins</li>
+                <li><strong>Database:</strong> Elasticsearch, NoSQL, SQL</li>
+                <li><strong>Agile Methodologies:</strong> Scrum, Kanban, DevSecOps, CI/CD</li>
+
+            </ul>
+        </section>
+        <section>
+            <h2>Achievements</h2>
+            <ul>
+                <li>Achieved €100,000/month savings through innovative transformation strategies at GfK.</li>
+                <li>Expanded global engineering teams while reducing workforce costs by 45%.</li>
+                <li>Successfully launched reusable semantic search services, reducing development costs by 20%.</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Websites</h2>
+            <ul>
+                <li>
+                    <strong>Personal Portfolio:</strong> <a href="http://moses.mansaray.co.uk" target="_blank">moses.mansaray.co.uk</a>
+                </li>
+                <li>
+                    <strong>GitHub:</strong> <a href="https://github.com/DaddyMoe" target="_blank">github.com/DaddyMoe</a>
+                </li>
+                <li>
+                    <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/mosesmansaray" target="_blank">linkedin.com/in/mosesmansaray</a>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Certificates</h2>
+            <ul>
+                <li><strong>Certified ScrumMaster:</strong> Scrum Alliance, 2017</li>
+                <li><strong>Elasticsearch Developer:</strong> Elasticsearch, 2015</li>
+                <li><strong>Google Cloud Platform Fundamentals:</strong> Google Cloud, 2019</li>
+                <li><strong>Getting Started with Kubernetes:</strong> Google Cloud, 2023</li>
+                <li><strong>Generative AI for Business Leaders:</strong> 2024</li>
+            </ul>
+        </section>
+    </main>
+</body>
+</html>
