--- a/index.html
+++ b/index.html
@@ -120,11 +120,24 @@
         </section>
         <section>
             <h2>Achievements</h2>
-            <ul>
-                <li>Achieved €100,000/month savings through innovative transformation strategies at GfK.</li>
-                <li>Expanded global engineering teams while reducing workforce costs by 45%.</li>
-                <li>Successfully launched reusable semantic search services, reducing development costs by 20%.</li>
-            </ul>
+            <section>
+                <h2>Achievements</h2>
+                <ul>
+                    <li>Achieved €55,000/month savings through innovative transformation strategies at GfK.</li>
+                    <li>Expanded global engineering teams while reducing workforce costs by 45% and maintaining productivity.</li>
+                    <li>Successfully launched reusable semantic search services, cutting development costs by 20%.</li>
+                    <li>Led the digital transformation of legacy systems, improving scalability and enabling rapid product development cycles.</li>
+                    <li>Mentored and promoted 11 senior engineers into leadership roles, fostering career growth and team sustainability.</li>
+                    <li>Designed and implemented scalable platform services, accelerating product cycles and reducing time-to-market.</li>
+                    <li>Launched an internal "engineering university" program, enhancing team capabilities and reducing team churn by 30%.</li>
+                    <li>Pioneered the adoption of agile and DevSecOps practices, improving delivery timelines by 25% and enhancing code quality.</li>
+                    <li>Delivered reusable ETL pipelines that streamlined data integration and improved operational efficiency across projects.</li>
+                    <li>Implemented robust observability solutions, providing real-time insights into system performance and reliability.</li>
+                    <li>Successfully built MVPs for multiple SaaS products, securing additional funding and expanding product portfolios.</li>
+                    <li>Enhanced enterprise search capabilities for Euromoney, reducing configuration times and boosting search precision.</li>
+                </ul>
+            </section>
+            
         </section>
         <section>
             <h2>Websites</h2>
