--- a/index.html
+++ b/index.html
@@ -120,25 +120,16 @@
         </section>
         <section>
             <h2>Achievements</h2>
-            <section>
-                <h2>Achievements</h2>
-                <ul>
-                    <li>Achieved €55,000/month savings through innovative transformation strategies at GfK.</li>
-                    <li>Expanded global engineering teams while reducing workforce costs by 45% and maintaining productivity.</li>
-                    <li>Successfully launched reusable semantic search services, cutting development costs by 20%.</li>
-                    <li>Led the digital transformation of legacy systems, improving scalability and enabling rapid product development cycles.</li>
-                    <li>Mentored and promoted 11 senior engineers into leadership roles, fostering career growth and team sustainability.</li>
-                    <li>Designed and implemented scalable platform services, accelerating product cycles and reducing time-to-market.</li>
-                    <li>Launched an internal "engineering university" program, enhancing team capabilities and reducing team churn by 30%.</li>
-                    <li>Pioneered the adoption of agile and DevSecOps practices, improving delivery timelines by 25% and enhancing code quality.</li>
-                    <li>Delivered reusable ETL pipelines that streamlined data integration and improved operational efficiency across projects.</li>
-                    <li>Implemented robust observability solutions, providing real-time insights into system performance and reliability.</li>
-                    <li>Successfully built MVPs for multiple SaaS products, securing additional funding and expanding product portfolios.</li>
-                    <li>Enhanced enterprise search capabilities for Euromoney, reducing configuration times and boosting search precision.</li>
-                </ul>
-            </section>
-            
+            <ul>
+                <li>Led a €55,000/month savings project through innovative digital transformation strategies at GfK.</li>
+                <li>Expanded global engineering teams, reducing workforce costs by 45% while maintaining productivity.</li>
+                <li>Mentored and promoted 11 senior engineers into leadership roles, fostering a sustainable and high-performing team.</li>
+                <li>Launched an internal "engineering university" program, improving team capabilities and reducing churn by 30%.</li>
+                <li>Designed scalable platform services that accelerated product development cycles and reduced time-to-market.</li>
+                <li>Pioneered the adoption of agile and DevSecOps practices, enhancing delivery timelines by 25% and improving code quality.</li>
+            </ul>
         </section>
+        
         <section>
             <h2>Websites</h2>
             <ul>
