--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <li>
                     <strong>Principal Engineer (Engineering Manager) - GfK, London</strong> (Jan 2022 - Present)<br>
                     <ul>
-                        <li>Led a €100,000/month savings digital transformation initiative by optimizing legacy systems.</li>
+                        <li>Led a €55,000/month savings digital transformation initiative by optimizing legacy systems.</li>
                         <li>Expanded global engineering teams, reducing workforce costs by 45% while maintaining productivity.</li>
                         <li>Promoted 11 senior engineers into leadership roles, fostering growth and mentoring.</li>
                     </ul>
@@ -84,7 +84,7 @@
                 <li>
                     <strong>Tech Lead (Senior Engineering Contractor) - GfK, London</strong> (Jul 2018 - Jan 2022)<br>
                     <ul>
-                        <li>Launched an “internal university” program, reducing team churn by 30%.</li>
+                        <li>Led an “internal university” program, reducing team churn by 30%.</li>
                         <li>Implemented agile practices that improved team efficiency and delivery timelines by 25%.</li>
                         <li>Developed scalable tech stacks for rapid MVP development, securing additional funding.</li>
                     </ul>
@@ -124,7 +124,7 @@
                 <li>Led a €55,000/month savings project through innovative digital transformation strategies at GfK.</li>
                 <li>Expanded global engineering teams, reducing workforce costs by 45% while maintaining productivity.</li>
                 <li>Mentored and promoted 11 senior engineers into leadership roles, fostering a sustainable and high-performing team.</li>
-                <li>Launched an internal "engineering university" program, improving team capabilities and reducing churn by 30%.</li>
+                <li>led an internal "engineering university" program, improving team capabilities and reducing churn by 30%.</li>
                 <li>Designed scalable platform services that accelerated product development cycles and reduced time-to-market.</li>
                 <li>Pioneered the adoption of agile and DevSecOps practices, enhancing delivery timelines by 25% and improving code quality.</li>
             </ul>
