primary colour change

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             line-height: 1.6;
         }
         header {
-            background-color: #0073e6;
+            background-color: #1D3557;
             color: white;
             padding: 1rem 0;
             text-align: center;
@@ -32,7 +32,7 @@
             margin-bottom: 2rem;
         }
         h2 {
-            color: #0073e6;
+            color: #1D3557;
             margin-bottom: 0.5rem;
         }
         ul {
@@ -50,7 +50,7 @@
             background-color: #f0f8ff;
         }
         a {
-            color: #0073e6;
+            color: #1D3557;
             text-decoration: none;
         }
         a:hover {
