--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </head>
 <body>
     <header>
-        <h1>Moses Mansaray - Professional Portfolio</h1>
+        <h1>Moses Mansaray - Portfolio</h1>
     </header>
     <main>
         <section>
